added picture and edited css file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Ronnie Larson</title>
     <header class="name">Ronnie Larson</header>
-    <header class="about"><link rel="stylesheet" href="">About</header>
-    <header class="portfolio"><link rel="stylesheet" href="">Portfolio</header>
-    <header class="contact"><link rel="stylesheet" href="">Contact</header>
+    <header class="about"><a href="index.html">About</a></header>
+    <header class="portfolio"><a href="portfolio.html">Portfolio</a></header>
+    <header class="contact"><a href="contact.html">Contact</a></header>
 
     
 </head>
@@ -17,7 +17,7 @@
 <body>
     <h1 class="about-me">About me</h1>
     
-    <img id="bio-image" src="" alt="bio image">
+    <img id="bio-image" src="assets/images/mylove.JPG" alt="bio image">
 
     <p class="about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis praesentium aliquam asperiores sed accusantium ducimus saepe officia nulla, qui ipsum iure minima quis recusandae consequuntur sit assumenda cum dolores! Commodi!</p>
 </body>
