--- a/contact.html
+++ b/contact.html
@@ -20,5 +20,6 @@
        <br> message <br>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
     </form>
+    <footer>Copyright &copy; </footer>
 </body>
 </html>
