--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <img id="bio-image" src="assets/images/mylove.JPG" alt="bio image">
 
     <p class="about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis praesentium aliquam asperiores sed accusantium ducimus saepe officia nulla, qui ipsum iure minima quis recusandae consequuntur sit assumenda cum dolores! Commodi!</p>
+    <footer> Copyright &copy; </footer>
 </body>
 </html>
