checked html for any errors

--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Contact</title>
 </head>
-<header class="myname">Ronnie Larson</header>
-<header class="about"><a href="index.html">About</a></header>
-<header class="portfolio"><a href="portfolio.html">Portfolio</a></header>
-<header class="contact"><a href="contact.html">Contact</a></header>
 <body>
+    <header class="myname">Ronnie Larson</header>
+    <header class="about"><a href="index.html">About</a></header>
+    <header class="portfolio"><a href="portfolio.html">Portfolio</a></header>
+    <header class="contact"><a href="contact.html">Contact</a></header>
+
     <h1 class="contact-heading">Contact</h1>
     <form>
         Name <br>
