--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Ronnie Larson</title>
 </head>
 <body>
-    <header class="name1">Ronnie Larson</header>
+    <h3 class="name1">Ronnie Larson</h3>
     <header class="about"><a href="index.html">About</a></header>
     <header class="portfolio"><a href="portfolio.html">Portfolio</a></header>
     <header class="contact"><a href="contact.html">Contact</a></header>
 
 
-    <h1 class="about-me">About me</h1>
+    <h3 class="about-me">About Me</h3>
     <img id="bio-image" src="assets/images/mylove.JPG" alt="bio image">
 
     <p class="about-me">I am very into Web Developing, I have great communication skills and I enjoy team settings, I’m currently a student at University of Utah, I'm studying Full Stack Web Developing. I love technology and have since a young age, I find electronics intriguing. I'm truly passionate about Web Developing, It excites me and I love the idea of learning new things and complex problem solving. I have a good grasp of the fundamentals of Web Developing, I always try to build upon those skills as well! I'm currently learning the MERN Stack at the U.
