--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,15 @@
     <title>Contact</title>
 </head>
 <body>
-    <header class="myname">Ronnie Larson</header>
-    <header class="about"><a href="index.html">About</a></header>
-    <header class="portfolio"><a href="portfolio.html">Portfolio</a></header>
-    <header class="contact"><a href="contact.html">Contact</a></header>
-
-    <h1 class="contact-heading">Contact</h1>
+        <h3 class="name">Ronnie Larson</h3>
+        <div class="navbar">
+            <a href="contact.html">Contact</a>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+        </div>
+        <br>
+        <div class="container1">
+    <h3 class="contact-heading">Contact</h3>
     <form>
         Name <br>
         <input type="text">
@@ -22,6 +25,7 @@
        <br> message <br>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
     </form>
+    </div>
     <footer>Copyright &copy; </footer>
 </body>
 </html>
