--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     <title>Ronnie Larson</title>
 </head>
 <body>
-    <h3 class="name1">Ronnie Larson</h3>
-    <header class="about"><a href="index.html">About</a></header>
-    <header class="portfolio"><a href="portfolio.html">Portfolio</a></header>
-    <header class="contact"><a href="contact.html">Contact</a></header>
-
-
+    <h3 class="name">Ronnie Larson</h3>
+        <div class="navbar">
+            <a href="contact.html">Contact</a>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+        </div>
+        <br>
+    
+        <div class="container">
     <h3 class="about-me">About Me</h3>
     <img id="bio-image" src="assets/images/mylove.JPG" alt="bio image">
 
-    <p class="about-me">I am very into Web Developing, I have great communication skills and I enjoy team settings, I’m currently a student at University of Utah, I'm studying Full Stack Web Developing. I love technology and have since a young age, I find electronics intriguing. I'm truly passionate about Web Developing, It excites me and I love the idea of learning new things and complex problem solving. I have a good grasp of the fundamentals of Web Developing, I always try to build upon those skills as well! I'm currently learning the MERN Stack at the U.
+    <p class="about-me1">I am very into Web Developing, I have great communication skills and I enjoy team settings, I’m currently a student at University of Utah, I'm studying Full Stack Web Developing. I love technology and have since a young age, I find electronics intriguing. I'm truly passionate about Web Developing, It excites me and I love the idea of learning new things and complex problem solving. I have a good grasp of the fundamentals of Web Developing, I always try to build upon those skills as well! I'm currently learning the MERN Stack at the U.
 
             When I'm not glued to my computer coding I am taking care of my daughter, she motivates me everyday to do better then I did yesterday . I am very much a people person, I love to meet new people and hear others opinions and ideas! 
             
             My Specialties: HTML 5, CSS 3, JavaScript and Visual Studio code!</p>
+        </div>
     <footer> Copyright &copy; </footer>
 </body>
 </html>
