--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronnie Larson</title>
 </head>
 <body>
+    
+    <header>
     <h3 class="name">Ronnie Larson</h3>
         <div class="navbar">
             <a href="contact.html">Contact</a>
             <a href="index.html">About</a>
             <a href="portfolio.html">Portfolio</a>
         </div>
+    </header>
         <br>
     
         <div class="container">
     <h3 class="about-me">About Me</h3>
-    <img id="bio-image" src="assets/images/mylove.JPG" alt="bio image">
+    <img class="bio-image" src="assets/images/mylove.JPG" alt="bio image">
 
     <p class="about-me1">I am very into Web Developing, I have great communication skills and I enjoy team settings, I’m currently a student at University of Utah, I'm studying Full Stack Web Developing. I love technology and have since a young age, I find electronics intriguing. I'm truly passionate about Web Developing, It excites me and I love the idea of learning new things and complex problem solving. I have a good grasp of the fundamentals of Web Developing, I always try to build upon those skills as well! I'm currently learning the MERN Stack at the U.
 
