Made changes to html files to update css

--- a/contact.html
+++ b/contact.html
@@ -8,23 +8,28 @@
     <title>Contact</title>
 </head>
 <body>
-        <h3 class="name">Ronnie Larson</h3>
-        <div class="navbar">
-            <a href="contact.html">Contact</a>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-        </div>
-        <br>
-        <div class="container1">
-    <h3 class="contact-heading">Contact</h3>
-    <form>
+        <header>
+                <h3 class="name">Ronnie Larson</h3>
+                    <div class="navbar">
+                        <a href="contact.html">Contact</a>
+                        <a href="index.html">About</a>
+                        <a href="portfolio.html">Portfolio</a>
+                    </div>
+                </header>
+                    <br>
+        <div class="container">
+    <h3 class="contact">Contact</h3>
+    <hr>
+    <form class="form">
         Name <br>
         <input type="text">
         <br>Email <br>
         <input type="text">
-       <br> message <br>
+       <br> Message <br>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
     </form>
+    <button class="button">Submit</button>
+    <br>
     </div>
     <footer>Copyright &copy; </footer>
 </body>
