changed the styling and added some to the html files

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
     <h3 class="name">Ronnie Larson</h3>
         <div class="navbar">
-            <a href="contact.html">Contact</a>
-            <a href="index.html">About</a>
+            <a href="contact.html">Contact |</a>
+            <a href="index.html">About |</a>
             <a href="portfolio.html">Portfolio</a>
         </div>
     </header>
