--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header>
-                <h3 class="name">Ronnie Larson</h3>
+                <h3 class="name"><br>&nbsp;&nbsp;Ronnie Larson&nbsp;&nbsp;</h3>
                     <div class="navbar">
                         <a href="contact.html">Contact |</a>
                         <a href="index.html">About |</a>
@@ -20,7 +20,7 @@
         <div class="container">
     <h3 class="contact">Contact</h3>
     <hr>
-    <form class="form">
+    <form>
         Name <br>
         <input type="text">
         <br>Email <br>
