--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <header>
-    <h3 class="name">Ronnie Larson</h3>
+    <h3 class="name"><br>&nbsp;&nbsp;Ronnie Larson&nbsp;&nbsp;</h3>
         <div class="navbar">
             <a href="contact.html">Contact |</a>
             <a href="index.html">About |</a>
