--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header>
-                <h3 class="name">Ronnie Larson</h3>
+                <h3 class="name"><br>&nbsp;&nbsp;Ronnie Larson&nbsp;&nbsp;</h3>
                     <div class="navbar">
                         <a href="contact.html">Contact |</a>
                         <a href="index.html">About |</a>
@@ -25,7 +25,6 @@
 
     <img class="portfolio-img" src="assets/images/download.png" alt="portfolioimg1" text="image">
     
-
     <img class="portfolio-img" src="assets/images/collage.jpg" alt="portfolioimg2">
         <br>
     <img class="portfolio-img" src="assets/images/person.jpg" alt="portfolioimg3">
