--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,7 @@
 
         <img class="portfolio-img" src="assets/images/download.png" alt="portfolioimg1">
            
-        <img class="portfolio-img" src="assets/images/collage.jpg" alt="portfolioimg2"
-        data-text="This is a picture collage, it will one day be filled with a project.">
+        <img class="portfolio-img" src="assets/images/collage.jpg" alt="portfolioimg2">
         <br>
         <img class="portfolio-img" src="assets/images/person.jpg" alt="portfolioimg3">
 
