Added a card to the portfolio images and styled them in css

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,32 @@
     <div class="container">
         <h3 class="portfolio-heading">Portfolio</h3>
         <hr>
-        <div class="images">
-
-        <img class="portfolio-img" src="assets/images/download.png" alt="portfolioimg1">
-           
-        <img class="portfolio-img" src="assets/images/collage.jpg" alt="portfolioimg2">
+        <div class="box">
+            <img class="portfolio-img" src="assets/images/download.png" alt="portfolioimg1">
+            <div class="text">
+                <h4>Circle</h4>
+            </div>
+        </div>
+        <div class="box">
+            <img class="portfolio-img" src="assets/images/collage.jpg" alt="portfolioimg2">
+            <div class="text">
+                <h4>Collage</h4>
+            </div>
+        </div>
         <br>
-        <img class="portfolio-img" src="assets/images/person.jpg" alt="portfolioimg3">
-
-        <img class="portfolio-img" src="assets/images/work.jpg" alt="portfolioimg4">
+        <div class="box">
+            <img class="portfolio-img" src="assets/images/person.jpg" alt="portfolioimg3">
+            <div class="text">
+                <h4>Person</h4>
+            </div>
+        </div>
+        <div class="box">
+            <img class="portfolio-img" src="assets/images/work.jpg" alt="portfolioimg4">
+            <div class="text">
+                <h4>Work</h4>
+            </div>
+        </div>
+        
         <br>
         </div>
     </div>
