chnahed button layout, made cursor pointer for links.

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                  <br> Message <br>
                 <textarea name="message" id="message" cols="30" rows="10"></textarea>
             </form>
-            <button class="button">Submit</button>
+            <button>Submit</button>
             <br>
         </div>
         <footer>Copyright &copy; </footer>
